fix: kanban card spacing

--- a/frappe/public/scss/kanban.scss
+++ b/frappe/public/scss/kanban.scss
@@ -9,7 +9,7 @@
 		max-width: 290px;
 		padding: 15px;
 		border-radius: $border-radius;
-		margin: var(--margin-lg) var(--margin-sm) var(--margin-lg) 0;
+		margin: var(--margin-lg) var(--margin-md) var(--margin-lg) 0;
 		background-color: var(--gray-200);
  		&.add-new-column {
 			order: 1;
